added minify images to the quizpages and aboutus and add pwa to manifest.json

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,20 +11,18 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+    <link rel="manifest" href="./manifest.json"
     <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
-
     <script
       src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"
       crossorigin></script>
-
     <script
       src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
       crossorigin></script>
-
     <script>var Alert = ReactBootstrap.Alert;</script>
-    <title>Next Steps</title>
+    <title>Next Step</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
