added starter files for pwa

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,22 +5,34 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="//fonts.googleapis.com/css?family=Open+Sans"
+    />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
+    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+    <link rel="manifest" href="./manifest.json" />
+    <script
+      src="https://unpkg.com/react/umd/react.production.min.js"
+      crossorigin
+    ></script>
     <script
       src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"
-      crossorigin></script>
+      crossorigin
+    ></script>
     <script
       src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
-      crossorigin></script>
-    <script>var Alert = ReactBootstrap.Alert;</script>
+      crossorigin
+    ></script>
+    <script>
+      var Alert = ReactBootstrap.Alert;
+    </script>
     <title>Next Steps</title>
   </head>
   <body>
